--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer id="footer">
     <div class="content">
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/">Episodes</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="{{ "/" | relative_url }}">Home</a></li>
+            <li><a href="{{ "/" | relative_url }}">Episodes</a></li>
+            <li><a href="{{ "/about" | relative_url }}">About</a></li>
             <li><a href="https://www.mozilla.org/internet-health/" rel="external">Internet Health</a></li>
         </ul>
     </div>
