--- a/_sass/includes/fonts/_zilla-slab.scss
+++ b/_sass/includes/fonts/_zilla-slab.scss
@@ -7,14 +7,14 @@
     font-family: 'Zilla Slab';
     font-weight: normal;
     font-style: normal;
-    src: url('/assets/fonts/ZillaSlab-Regular.woff2') format('woff2'),
-         url('/assets/fonts/ZillaSlab-Regular.woff') format('woff');
+    src: url($baseurl + '/assets/fonts/ZillaSlab-Regular.woff2') format('woff2'),
+         url($baseurl + '/assets/fonts/ZillaSlab-Regular.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Zilla Slab';
     font-weight: bold;
     font-style: normal;
-    src: url('/assets/fonts/ZillaSlab-Bold.woff2') format('woff2'),
-         url('/assets/fonts/ZillaSlab-Bold.woff') format('woff');
+    src: url($baseurl + '/assets/fonts/ZillaSlab-Bold.woff2') format('woff2'),
+         url($baseurl + '/assets/fonts/ZillaSlab-Bold.woff') format('woff');
 }
