--- a/_includes/subscribe-links.html
+++ b/_includes/subscribe-links.html
@@ -9,6 +9,6 @@
         <a href=""><img src="{{ "/assets/images/radiopublic-badge.svg" | relative_url }}" alt="Subscribe on RadioPublic"></a>
     </li>
     <li class="rss-link">
-        <a href="http://feeds.mozilla-podcasts.org/irl">Subscribe via RSS</a>
+        <a href="http://feeds.mozilla-podcasts.org/irl">Or, subscribe using RSS</a>
     </li>
 </ul>
