--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     </body>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="{{ "/assets/js/mozilla.smoothscroll.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/main.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/mozilla.modal.js" | relative_url }}"></script>
+    <script src="{{ "/assets/js/newsletter.js" | relative_url }}"></script>
 </html>
