--- a/_sass/components/_modal.scss
+++ b/_sass/components/_modal.scss
@@ -40,6 +40,8 @@ html.noscroll {
         padding: 20px;
 
         .inner {
+            margin: 0 auto;
+            max-width: 600px;
             position: relative;
             background: #fff;
             padding: 20px;
