--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,7 @@
-<header class="content" role="banner">
-  <a class="site-title" href="{{ "/" | relative_url }}"><span>{{ site.title | escape }}</span></a>
+<header class="content" role="banner" id="site-header">
+    <a href="https://www.mozilla.org" id="mozilla-logo"><span>Mozilla</span></a>
+
+    <a class="site-title" href="{{ "/" | relative_url }}">
+        <h1>IRL: Because Online Life Is Real Life</h1>
+    </a>
 </header>
