--- a/_sass/components/_newsletter.scss
+++ b/_sass/components/_newsletter.scss
@@ -2,203 +2,63 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import '../../pebbles/includes/animations';
-@import '../../pebbles/includes/lib';
+@import '../includes/lib';
 
-#newsletter-subscribe {
-    background: $color-mozred;
-    color: #fff;
-    padding-top: 20px;
+/* classes don't match naming schem for other files because
+I didn't want to alter the javascript that relies on them */
 
-    // contains all newsletter elements - errors, form, thank you
-    .content {
-        padding: 40px 0;
-        width: $width-phone;
+.newsletter_icon {
+    height: 37px;
+    width: 56px;
+    margin-top: -4px;
+}
+
+.newsletter_errors {
+    display: none; /* hide by default */
+    margin-bottom: 20px;
+    box-shadow: 0 0 0 1px #ffffff; // incase it's on a black background
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.1); // incase it's on a white background
+
+    > :last-child {
+        margin-bottom: 0;
+    }
+}
+
+.newsletter_promise {
+    display: block;
+    @include font-size(14px);
+}
+
+.newsletter_thanks {
+    display: none;
+}
+
+.newsletter-inline {
+    #newsletter_email label {
+        @include visually-hidden();
     }
 
-    // container for <h3> and <h4>
-    .form-title {
-        background: url('/media/img/newsletter/mozorg-newsletter.svg') center top no-repeat;
-        @include background-size(100px 100px);
-        padding: 120px 0 20px 0;
-        text-align: center;
-    }
-
-    // newsletter title and "Thanks!" after submission
-    h3 {
-        @include font-size(32px);
-        margin: 0 0 0.2em;
-        text-align: center;
-    }
-
-    // newsletter subtitle
-    h4 {
-        @include font-size(20px);
-        font-weight: normal;
-
-        @media #{$mq-desktop} {
-            @include font-size(24px);
-            line-height: 1.1;
-        }
-    }
-
-    .field {
-        margin-bottom: 10px;
-
-        label {
-            display: block;
-            margin-bottom: 0.1em;
-        }
-    }
-
-    // html/text radio buttons
-    .field-format label {
-        display: inline;
-        margin-right: 20px;
-    }
-
-    // privacy checkbox
-    .field-privacy {
-        @include font-size(12px);
-
-        input {
-            float: left;
-        }
-
-        .title {
-            display: block;
-            padding-left: 25px;
-        }
-    }
-
-    a {
-        color: #fff;
-    }
-
-    input[type='email'] {
-        @include border-box;
-        @include font-size(16px);
-        @include transition(all 0.1s linear);
-        border: 0;
-        border-radius: 4px;
-        line-height: 1.1;
-        padding: 0.75em 20px;
+    input[type=email],
+    .button {
         width: 100%;
     }
-
-    select {
-        @include font-size(14px);
-        font-family: inherit;
-        line-height: 1.5;
-        max-width: 80%;
-    }
-
-    // copy underneath "Sign Up Now" button
-    p.form-details {
-        line-height: 1;
-        margin-top: 8px;
-    }
-
-    // wrapper for thank you elements
-    .thank {
-        padding-top: 20px;
-
-        p {
-            @include animation(pebbles-fade-in 0.5s ease-in 0.8s 1 normal both);
-            margin-top: 20px;
-        }
-    }
-
-    .errorlist {
-        background: #fff;
-        color: $color-mozred;
-        padding: 10px 20px;
-    }
-
-    @media #{$mq-phone-wide} {
-        .content {
-            width: $width-phone-wide;
-        }
-    }
-
-    @media #{$mq-tablet} {
-        .content {
-            width: $width-tablet;
-        }
-
-        #newsletter-form {
-            @include clearfix;
-            float: left;
-            margin-left: 430px;
-            width: 280px;
-        }
-
-        .form-title {
-            @include background-size(120px 120px);
-            background-position: left 10px;
-            float: left;
-            margin: -10px 10px 0 -400px;
-            padding: 10px 0 20px 140px;
-            text-align: left;
-            width: 220px;
-        }
-
-        h3 {
-            text-align: left;
-        }
-    }
-
-    @media #{$mq-desktop} {
-        .content {
-            width: $width-desktop;
-        }
-
-        #newsletter-form {
-            margin-left: 570px;
-            padding-top: 20px;
-            width: 380px;
-        }
-
-        .form-title {
-            @include background-size(150px 150px);
-            background-position: left top;
-            margin: -20px 10px 0 -540px;
-            min-height: 120px;
-            padding-left: 180px;
-            width: 300px;
-        }
-
-        h3 {
-            @include font-size(40px);
-        }
-
-        h4 {
-            @include font-size(24px);
-        }
-    }
 }
 
-.js {
-    // hide details for JS users
-    // (displayed when email field is focused)
-    #form-details,
-    .form-details {
+/* hide the newsletter selection */
+#newsletter_options {
+    display: none;
+}
+
+.js .js-collapse {
+    #newsletter_privacy,
+    .newsletter_promise {
         display: none;
     }
-
-    // spinner circa the web 2 point oh
-    #newsletter-spinner {
-        bottom: 0;
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
 }
 
-html[dir="rtl"] #newsletter-subscribe {
-    h3,
-    h4 {
-        text-align: right;
+@media #{$mq-tablet} {
+    .newsletter:not(.newsletter-inline) {
+        min-height: 50vh;
     }
 }
