--- a/_sass/irlpodcast.scss
+++ b/_sass/irlpodcast.scss
@@ -16,59 +16,100 @@
 
     // Components - specific purpose blocks with sub-elements and modifiers
     'components/modal',
+    'components/newsletter',
     'components/sections',
     'components/footer';
 
 
-.content {
-    text-align: center;
+a,
+a:active,
+a:link,
+a:visited {
+    color: #88429d;
+    transition: color 0.2s ease;
+}
+
+a:focus,
+a:hover,
+a:visited:focus,
+a:visited:hover {
+    color: lighten(#88429d, 5%);
+}
+
+#mozilla-logo {
+    @include background-size(100px 32px);
+    @include image-replaced();
+    background-image: url($baseurl + '/assets/images/moz-wordmark-dark-reverse.svg');
+    background-repeat: no-repeat;
+    display: block;
+    height: 32px;
+    margin-bottom: 20px;
+    width: 100px;
+}
+
+#site-header:after {
+    @include gradient-horizontal(#ff00fd, 0%, #0e00cf, 100%);
+    content: '';
+    display: block;
+    height: 2px;
+    margin-top: 40px;
+    visibility: visible;
+    width: 100%;
 }
 
 .site-title {
-    @include zilla-slab-highlight();
-    @include font-size(22px);
-    background-image: url($baseurl + '/assets/images/banner-mobile.jpg');
-    background-position: center top;
-    background-repeat: no-repeat;
-    display: flex;
-    height: 169px;
-    margin: 0 auto;
-    text-align: center;
-    font-weight: bold;
-    color: #000 !important;
-    width: auto;
-    justify-content: center;
-    align-items: flex-end;
+    color: #000;
+    text-decoration: none;
 
-    span {
-        padding: 20px 10px;
+    &:active,
+    &:link,
+    &:visited {
+        color: #000;
     }
 
-    @media #{$mq-phone-wide} {
-        @include font-size(36px);
-        background-image: url($baseurl + '/assets/images/banner-tablet.jpg');
-        height: 394px;
+    &:focus,
+    &:hover,
+    &:visited:focus,
+    &:visited:hover {
+        color: #000;
+        text-decoration: none;
     }
 
-    @media #{$mq-desktop} {
-        @include font-size(46px);
-        background-image: url($baseurl + '/assets/images/banner-desktop.jpg');
-        height: 787px;
+    &:before {
+        @include background-size(280px 280px);
+        background-image: url($baseurl + '/assets/images/irl-logo-300px.png');
+        content: '';
+        display: block;
+        height: 280px;
+        margin-bottom: 20px;
+        width: 280px;
+    }
+
+    @media #{$mq-high-res} {
+        &:before {
+            background-image: url($baseurl + '/assets/images/irl-logo-600px.png');
+        }
     }
 }
 
 .subscribe-links {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    text-align: center;
-
     li {
-        display: flex;
-        flex: 0 0 50%;
-        flex-direction: column;
-        justify-content: center;
         margin-bottom: 10px;
+        text-align: center;
+    }
+
+    @media #{$mq-phone-wide} {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+        li {
+            display: flex;
+            flex: 0 0 50%;
+            flex-direction: column;
+            justify-content: center;
+            margin-bottom: 10px;
+        }
     }
 
     @media #{$mq-tablet} {
@@ -80,6 +121,10 @@
 
 #modal .subscribe-links {
     display: block;
+
+    @media #{$mq-tablet} {
+        display: flex;
+    }
 }
 
 #episode-list {
@@ -146,6 +191,25 @@
     padding: 10px 0;
     margin-top: 20px;
 
+    a,
+    a:active,
+    a:focus,
+    a:hover,
+    a:link,
+    a:visited,
+    a:visited:focus,
+    a:visited:hover {
+        color: #fff;
+        text-decoration: none;
+    }
+
+    a:focus,
+    a:hover,
+    a:visited:focus,
+    a:visited:hover {
+        text-decoration: underline;
+    }
+
     ul {
         display: flex;
         justify-content: space-around;
@@ -162,6 +226,7 @@
     h4 {
         @include font-size-level3();
         margin-bottom: 20px;
+        text-align: center;
     }
 }
 
@@ -172,5 +237,3 @@
         display: none;
     }
 }
-
-
