Lots of UI changes Brought back demo episode for GA purposes Added noindex tag so we can deploy to the real URL

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}" class="no-js">
     {% include head.html %}
 
-    <body>
+    <body id="{{ page.id }}">
         {% include header.html %}
 
         <main class="page-content" aria-label="Content">
