--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,12 +4,20 @@ layout: default
 
 <section id="intro">
     <div class="content">
+        <div class="site-title">
+            <h1>IRL: Because Online Life Is Real Life</h1>
+        </div>
+
         <p>
             Host Veronica Belmont shares real stories of life online &mdash; and
             real talk about the future of the Web. IRL &mdash; Because online
             life is real life. Brought to you by Mozilla.
         </p>
+    </div>
+</section>
 
+<section id="subscribe">
+    <div class="content">
         {% include subscribe-links.html %}
     </div>
 </section>
