--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- TODO: remove for launch! -->
+    <meta name="robots" content="noindex" />
+
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
@@ -14,6 +17,9 @@
 
     <script src="{{ "/assets/js/pre-render.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/mozilla.dnt-helper.js" | relative_url }}"></script>
+
+    <script src="https://use.typekit.net/ksz8uxj.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
     {% if jekyll.environment == 'production' and site.google_analytics %}
         {% include google-analytics.html %}
