--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,12 @@
     {% include head.html %}
 
     <body id="{{ page.id }}">
+    {% if jekyll.environment == 'production' and site.gtm_id %}
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.gtm_id }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
+    {% endif %}
+
         {% include header.html %}
 
         <main class="page-content" aria-label="Content">
