--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">Episode {{ page.episode }} - {{ page.title | escape }}</h1>
+  <header class="content">
+    <h1 class="post-title" itemprop="name headline">Episode {{ page.number }} - {{ page.title | escape }}</h1>
     <p class="post-meta">
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
@@ -15,7 +15,10 @@ layout: default
       {% endif %}</p>
   </header>
 
-  <div class="post-content" itemprop="articleBody">
+  <div class="content" itemprop="articleBody">
+    {% assign episode = page %}
+    {% include episode-module.html episode=episode %}
+
     {{ content }}
   </div>
 </article>
