--- a/_sass/includes/_variables.scss
+++ b/_sass/includes/_variables.scss
@@ -3,20 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 
-// TODO: remove zilla stuff if TypeKit is given the green light
-
-// The custom X-LocaleSpecific font family is defined with a @font-face rule in
-// locale-specific stylesheets which can be found at /media/css/l10n/. See
-// /docs/l10n.rst for details.
-$font-zilla-slab: 'Zilla Slab', 'Open Sans', X-LocaleSpecific, sans-serif;
-
-// Use this highlight variant with caution and plan for a fallback
-// in a standard, non-highlight font. Your color choices should be
-// equally readable with a non-highlight variant.
-$font-zilla-slab-highlight: 'Zilla Slab Highlight', 'Zilla Slab', 'Open Sans', X-LocaleSpecific, sans-serif;
-
-// loaded via typekit
-$font-franklin-gothic: 'franklin-gothic-urw-comp', 'sans-serif';
+$font-franklin-gothic: 'FranklinGothic', sans-serif;
 
 $base-font-stack: $font-franklin-gothic;
 $base-font-size: 120%;
